--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,99 +1,295 @@
 * {
-    font-family: 'Poppins', sans-serif;
-    font-size: 19px;
-    font-weight: 700;
-    line-height: 20px;
+    font-family: 'Fira Sans', sans-serif;
+    box-sizing: border-box;
+}
+
+:root {
+    --static-color:#1A75E8;
+    --hover-color:#4899FF;
+    --active-color:#1963C0;
+    --primary-color:#111238;
+    --paragraph-color:#B2B2B2;
+}
+
+p {
+    color: var(--primary-color);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+h1 {
+    color: var(--primary-color);
+    font-size: 44px;
+    font-weight: 900;
+    line-height: 53px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+h2 {
+    color: var(--primary-color);
+    font-size: 36px;
+    font-weight: 900;
+    line-height: 43px;
     letter-spacing: 0em;
     text-align: center;
 }
 
-main .infection {
-    width: 1920px;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+h3 {
+    color: var(--primary-color);
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 29px;
+    letter-spacing: 0em;
+    text-align: left;
 }
 
-.infection .container {
-    width: 1006px;
-    height: 121px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+h4 {
+    color: var(--primary-color);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: left;
 }
 
-.infection .container > .symptom-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-left: 60px;
+h5 {
+    color: var(--primary-color);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #B2B2B2;
+
 }
 
-.infection .container > .symptom-container .wrapper-picture {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 88px;
-    height: 88px;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
-    border-radius: 50px;
+h6 {
+    color: var(--primary-color);
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0em;
+    text-align: left;
 }
 
-.infection .container > .symptom-container .wrapper-text {
-    width: 250px;
-    height: 20px;
-    margin-top: 15px;
+button {
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: row;
-}
-
-.infection .container > .symptom-container h6 {
-    display: flex;
     justify-content: center;
     align-items: center;
-    background-color:#79C0AA;
-    color: white;
-    border-radius: 50px;
-    width: 33px;
-    height: 33px;
-    font-size: 22px;
+    padding: 15px 30px;
+    gap: 10px;
+    background: var(--static-color);
+    border-radius: 5px;
+    color: #FFFFFF;
 }
 
-.infection .container > .symptom-container h6 span {
-    font-size: 15px;
+header {
+    background: #F2F3F6 repeat ;
+    width: 1440px;
+    height: 782px;
     display: flex;
-    align-items: flex-end;
-    height: 25px;
+    justify-content: center; 
 }
 
-.infection .container > .symptom-container .first-number {
-    position: absolute;
-    left: 545px;
-    top: 50px;
+header > .flex-container {
+    width: 1440px;
+    height: 782px;
+    display: flex;
+    align-items: center;
 }
 
-.infection .container > .symptom-container .second-number {
-    position: absolute;
-    left: 855px;
-    top: 45px;
+header  .hero {
+    display: flex;
+    justify-content: center;
+    width: 1332px;
+    height: 557.49px;
 }
 
-.infection .container > .symptom-container .third-number {
-    position: absolute;
-    left: 1170px;
-    top: 45px;
+.hero > .flex-container {
+    width: 1332px;
+    height: 557px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 
-.infection .container > .symptom-container .fourth-number {
-    position: absolute;
-    left: 1480px;
-    top: 45px;
+.hero > .flex-container  .hero-text-container {
+    width: 460px;
+    height: 348px;
 }
+
+
+.hero > .flex-container .hero-text-container .wrapper-main-hero-text h1,
+.hero > .flex-container .hero-text-container .wrapper-detalis-hero-text p {
+    width: 460px;
+    height: 106px;
+}
+
+.hero > .flex-container .hero-text-container  .wrapper-search-hero-text {
+    width: 460px;
+    height: 75px;
+}
+
+.hero > .flex-container .hero-text-container  .wrapper-search-hero-text input {
+    width: 447px;
+    height: 69.92px;
+
+    background: #FFFFFF;
+    border: 1px solid rgba(209, 209, 209, 0.1);
+    box-shadow: 0px 4px 25px rgba(15, 17, 56, 0.1);
+    border-radius: 5px;
+}
+
+
+.hero > .flex-container .hero-text-container .wrapper-heading-hero-text h5{
+    width: 345px;
+    height: 27px;
+}
+
+.hero > .flex-container .hero-text-container .wrapper-heading-hero-text span {
+    border: #B2B2B2 solid 1px;
+    border-radius: 6px;
+    margin-left: 6px;
+    padding: 5px;
+}
+
+.hero .flex-container .hero-img-container {
+    height: 490px;
+    width: 395px;
+}
+
+@media screen and (max-width: 520px) {
+
+    body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    header, header > .flex-container,
+    header .hero, .hero > .flex-container {
+        width: 320px;
+        height: 783px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .hero > .flex-container {
+        width: 320px;
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+    
+    .hero > .flex-container .hero-text-container {
+        max-width: 320px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .hero > .flex-container .hero-text-container > div {
+        max-width: 320px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .hero > .flex-container .hero-text-container .wrapper-main-hero-text {
+        width: 320px;
+        height: 86px;
+
+    }
+    
+    .hero > .flex-container .hero-text-container .wrapper-detalis-hero-text{
+        width: 320px;
+        height: 86px;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .hero > .flex-container .hero-text-container  .wrapper-search-hero-text {
+        width: 320px;
+        height: 80px;
+    }
+
+    .hero > .flex-container .hero-text-container  .wrapper-search-hero-text input {
+        width: 290px;
+        height: 70px;
+        background: #FFFFFF;
+        border: 1px solid rgba(209, 209, 209, 0.1);
+        box-shadow: 0px 4px 25px rgba(15, 17, 56, 0.1);
+        border-radius: 5px;
+        margin-top: 30px;
+    }
+
+    .hero > .flex-container .hero-text-container .wrapper-heading-hero-text  h5{
+        width: 320px;
+        height: 77px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .hero > .flex-container .hero-text-container .wrapper-heading-hero-text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0px;
+        gap: 15px;
+        width: 320px;
+        height: 59px;
+        margin-top: 20px;
+    }
+    
+    .hero .flex-container .hero-img-container {
+        width: 252.45px;
+        height: 258.65px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .hero .flex-container .hero-img-container  svg {
+        width: 250px;
+        height: 258px;
+    }
+
+    
+    h1 {
+        line-height: 30px;
+        font-size: 24px;
+        margin-top: 30px;
+        text-align: center;
+        width: 235px;
+        height: 58px;
+    }
+
+    p {
+        width: 290px;
+        height: 88px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 140%;
+        text-align: center;
+    }
+
+    h5 {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        text-align: center;
+    }
+}
+
 
 
